Adding the image gallery

--- a/index.html
+++ b/index.html
@@ -42,10 +42,16 @@
 				<li class="active"><a href="index.html">Home</a></li>
 
 			<!-- 	<li><a href="generic.html">Generic Page</a></li>
-				<li><a href="elements.html">Elements Reference</a></li> -->
-
+				<li><a href="elements.html">Elements Reference</a></li>
+				<li><a href="images.html">Some of My Photos</a></li>
 				<li><a href="#main">Projects</a></li>
+				
+				-->
+
+			
 				<li><a href="#footer">Contact</a></li>
+				<li><a href="#main">Projects</a></li>
+				<li><a href="images.html">Some of My Photos</a></li>
 
 			</ul>
 			<ul class="icons">
