--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			
 				<li><a href="#footer">Contact</a></li>
 				<li><a href="#main">Projects</a></li>
-				<li><a href="images.html">Some of My Photos</a></li>
+				<li><a href="images.html">Some of My Photography</a></li>
 
 			</ul>
 			<ul class="icons">
