--- a/images.html
+++ b/images.html
@@ -34,7 +34,7 @@
 		<!-- Main -->
 		<div id="main">
 			<article class="thumb">
-				<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.JPG" alt="" /></a>
+				<a href="images/fulls/01.JPG" class="image"><img src="images/thumbs/01.JPG" alt="" /></a>
 				<h2>Madison</h2>
 				<p>Bascom Hill in 2011 while I was studying there . </p>
 			</article>
@@ -59,7 +59,7 @@
 				<p>During my Trip in April 2024</p>
 			</article>
 			<article class="thumb">
-				<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.JPG" alt="" /></a>
+				<a href="images/fulls/06.JPG" class="image"><img src="images/thumbs/06.JPG" alt="" /></a>
 				<h2>San Fransisco</h2>
 				<p>View on the city during my trip in December 2012</p>
 			</article>
