--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 			
 				<li><a href="#footer">Contact</a></li>
 				<li><a href="#main">Projects</a></li>
-				<li><a href="images.html">Some of My Photography</a></li>
-
+			<!--	<li><a href="images.html">Some of My Photography</a></li>
+				<li><a href="auth.html">Sign Up</a></li> -->
+				<li><a href="login-2.html">Account</a></li>
 			</ul>
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/husaynfakher/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
