--- a/login-2.html
+++ b/login-2.html
@@ -52,13 +52,13 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-md-12">
+                            <!--<div class="col-md-12"> 
                                 <div class="checkbox">
                                     <label>
                                         <input type="checkbox"> Remember me
                                     </label>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="form-group">
                           <div class="col-md-12">
