--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 	</section>
 	<section class="split contact">
 	  <section class="alt">
-		<h3>Address</h3>
+<!--		<h3>Address</h3>
 		<p>1234 Somewhere Road #87257<br />
 		  Nashville, TN 00000-0000</p>
 	  </section>
@@ -246,7 +246,7 @@
 		<h3>Phone</h3>
 		<p><a >(000) 000-0000</a></p>
 	  </section>
-	  <section>
+	  <section> -->
 		<h3>Email</h3>
 		<p><a>husayn.fakher@gmail.com</a></p>
 	  </section>
