Added the trending video section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 				<li><a href="#main">Projects</a></li>
 			<!--	<li><a href="images.html">Some of My Photography</a></li>
 				<li><a href="auth.html">Sign Up</a></li> -->
+				<li><a href="blog/index.html">Trending Videos</a></li>
 				<li><a href="login-2.html">Account</a></li>
 			</ul>
 			<ul class="icons">
@@ -266,7 +267,7 @@
 
 
 
-    // Your Firebase config (replace with your actual configuration values)
+    //  Firebase config 
     const firebaseConfig = {
       apiKey: "AIzaSyD6ceMxFL4vlRUpWmOX0OSq8Lpl9XK57M8",
       authDomain: "imagegalleryapp-64e97.firebaseapp.com",
