Added video categories

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 				<li><a href="#main">Projects</a></li>
 			<!--	<li><a href="images.html">Some of My Photography</a></li>
 				<li><a href="auth.html">Sign Up</a></li> -->
-				<li><a href="blog/index.html">Trending Videos</a></li>
+			<!--	<li><a href="blog/index.html">Trending Videos</a></li> -->
 				<li><a href="login-2.html">Account</a></li>
+				<li><a href="Trending-Youtube-Videos.html">Trending YouTube Videos</a></li>
 			</ul>
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/husaynfakher/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
