--- a/Trending-Youtube-Videos.html
+++ b/Trending-Youtube-Videos.html
@@ -82,115 +82,195 @@
 
 	</div>
 
-	<!-- Scripts -->
 	<script>
+		let cachedVideos = null; // Store API response to avoid redundant requests
+	
 		async function fetchYouTubeData(regionGroup = 'top10') {
 			updateActiveTab(regionGroup);
-
+	
 			const featuredPost = document.getElementById('featured-post');
 			const nonFeaturedPosts = document.getElementById('non-featured-posts');
-
+	
+			// Show loading state
+			featuredPost.innerHTML = `<p>Loading...</p>`;
+	
 			try {
-				//const response = await fetch('https://gettrendingvideosfromfirestore-mmwifmqlnq-uc.a.run.app/');
-
-				// Construct the query URL with regionGroup if provided
 				let url = 'https://gettrendingvideosfromfirestore-mmwifmqlnq-uc.a.run.app/';
 				if (regionGroup) {
 					url += `?regionGroup=${encodeURIComponent(regionGroup)}`;
 				}
-
+	
 				const response = await fetch(url);
-
-				console.log(url);
-
-
-
 				if (!response.ok) {
+					featuredPost.innerHTML = `<p>Error fetching data. Please try again later.</p>`;
 					console.error('Error fetching data:', response.statusText);
 					return;
 				}
-
-				const videos = await response.json();
-
-				if (!videos || videos.length === 0) {
-					console.error('No videos found.');
+	
+				const responseData = await response.json();
+				console.log("API Response:", responseData);
+	
+				// Ensure response is correctly formatted
+				if (!Array.isArray(responseData) || responseData.length === 0) {
+					console.error("Unexpected API response format:", responseData);
+					featuredPost.innerHTML = `<p>Invalid data format received.</p>`;
 					return;
 				}
-
-			        // Function to format numbers with commas
-					function formatNumber(number) {
-            return number.toLocaleString(); // Formats numbers with commas
-        }
-
-		 // Function to truncate the description to 300 characters
-		 function truncateDescription(description, maxLength = 300) {
-            if (description.length > maxLength) {
-                return description.substring(0, maxLength) + '...';
-            }
-            return description;
-        }
-
-        // Featured post
-        const mostViewedVideo = videos[0];
-        featuredPost.innerHTML = `
-            <header class="major">
-                <h3><a href="${mostViewedVideo.videoLink}" target="_blank">${mostViewedVideo.title}</a></h3>
-            </header>
-            <a href="${mostViewedVideo.videoLink}" target="_blank" class="image main">
-                <img src="${mostViewedVideo.thumbnailUrl}" alt="${mostViewedVideo.title}" />
-            </a>
-			<p><strong>Country:</strong> ${mostViewedVideo.countryName}</p>
-			<p><strong>Views:</strong> ${formatNumber(mostViewedVideo.views)}</p>
-			   <p>${truncateDescription(mostViewedVideo.description)}</p>
-        `;
-
-        // Non-featured posts
-        nonFeaturedPosts.innerHTML = '';
-        videos.slice(1).forEach(video => {
-            const post = document.createElement('article');
-            post.innerHTML = `
-                <header>
-                    <h3><a href="${video.videoLink}" target="_blank">${video.title}</a></h3>
-                </header>
-                <a href="${video.videoLink}" target="_blank" class="image fit">
-                    <img src="${video.thumbnailUrl}" alt="${video.title}" />
-                </a>
-				 <p><strong>Country:</strong> ${video.countryName}</p>
-				 <p><strong>Views:</strong> ${formatNumber(video.views)}</p>
-                <p>${truncateDescription(video.description)}</p>
-                
-               
-            `;
-            nonFeaturedPosts.appendChild(post);
-        });
-    } catch (error) {
-        console.error('Error during data processing:', error);
-    }
-}
-function updateActiveTab(regionGroup) {
-    const tabs = document.querySelectorAll('#nav .links li');
-    tabs.forEach(tab => {
-        // Map regionGroup to the text content of the tab
-        const tabText = tab.textContent.toLowerCase();
-        const regionMap = {
-            top10: 'top 10 worldwide',
-            english: 'english world',
-            spanish: 'spanish world',
-            arabic: 'arabic world',
-        };
-
-        // Compare the regionGroup with the mapped text
-        if (regionMap[regionGroup] && tabText === regionMap[regionGroup]) {
-            tab.classList.add('active');
-        } else {
-            tab.classList.remove('active');
-        }
-    });
-}
-
-
+	
+				// Convert response into a lookup dictionary
+				let countryVideosMap = {};
+				responseData.forEach(item => {
+					countryVideosMap[item.country] = item.videos; // Store videos by country name
+				});
+	
+				// Store in cache
+				cachedVideos = countryVideosMap;
+	
+				// Display one most-viewed video per country
+				displayMostViewedPerCountry(responseData);
+			} catch (error) {
+				featuredPost.innerHTML = `<p>Error loading data. Please try again later.</p>`;
+				console.error('Error during data processing:', error);
+			}
+		}
+	
+		function displayMostViewedPerCountry(countryList) {
+			const featuredPost = document.getElementById('featured-post');
+			const nonFeaturedPosts = document.getElementById('non-featured-posts');
+	
+			function formatNumber(number) {
+				return new Intl.NumberFormat('en-US').format(number);
+			}
+	
+			function truncateDescription(description, maxLength = 300) {
+				return description.length > maxLength ? description.substring(0, maxLength) + '...' : description;
+			}
+	
+			// Featured post: Display the most-viewed video from the first country
+			const firstCountry = countryList[0];
+			const firstVideo = firstCountry.videos[0]; // Most viewed video in the country
+	
+			featuredPost.innerHTML = `
+				<header class="major">
+					<h3><a href="${firstVideo.videoLink}" target="_blank">${firstVideo.title}</a></h3>
+				</header>
+				<a href="${firstVideo.videoLink}" target="_blank" class="image main">
+					<img src="${firstVideo.thumbnailUrl}" alt="${firstVideo.title}" />
+				</a>
+				<p><strong>Country:</strong> 
+					<a href="#" onclick="handleCountryClick('${firstCountry.country}')">${firstCountry.country}</a>
+				</p>
+				<p><strong>Views:</strong> ${formatNumber(firstVideo.views)}</p>
+				<p>${truncateDescription(firstVideo.description)}</p>
+			`;
+	
+			// Non-featured posts: Display one most-viewed video per country
+			nonFeaturedPosts.innerHTML = '';
+			countryList.slice(1).forEach(country => {
+				const topVideo = country.videos[0]; // Most viewed video from this country
+				const post = document.createElement('article');
+				post.innerHTML = `
+					<header>
+						<h3><a href="${topVideo.videoLink}" target="_blank">${topVideo.title}</a></h3>
+					</header>
+					<a href="${topVideo.videoLink}" target="_blank" class="image fit">
+						<img src="${topVideo.thumbnailUrl}" alt="${topVideo.title}" />
+					</a>
+					<p><strong>Country:</strong> 
+						<a href="#" onclick="handleCountryClick('${country.country}')">${country.country}</a>
+					</p>
+					<p><strong>Views:</strong> ${formatNumber(topVideo.views)}</p>
+					<p>${truncateDescription(topVideo.description)}</p>
+				`;
+				nonFeaturedPosts.appendChild(post);
+			});
+		}
+	
+		function handleCountryClick(countryName) {
+			if (!cachedVideos) {
+				alert("Videos are not yet loaded. Please try again.");
+				return;
+			}
+	
+			const countryVideos = cachedVideos[countryName];
+	
+			if (!countryVideos || countryVideos.length === 0) {
+				alert(`No trending videos found for ${countryName}.`);
+				return;
+			}
+	
+			console.log(`Showing top 10 videos for ${countryName}:`, countryVideos);
+			displayMostViewedVideosForCountry(countryName, countryVideos);
+		}
+	
+		function displayMostViewedVideosForCountry(countryName, videos) {
+			const featuredPost = document.getElementById('featured-post');
+			const nonFeaturedPosts = document.getElementById('non-featured-posts');
+	
+			function formatNumber(number) {
+				return new Intl.NumberFormat('en-US').format(number);
+			}
+	
+			function truncateDescription(description, maxLength = 300) {
+				return description.length > maxLength ? description.substring(0, maxLength) + '...' : description;
+			}
+	
+			// Featured post: Show the most viewed video of the country
+			const mostViewedVideo = videos[0];
+			featuredPost.innerHTML = `
+				<header class="major">
+					<h3><a href="${mostViewedVideo.videoLink}" target="_blank">${mostViewedVideo.title}</a></h3>
+				</header>
+				<a href="${mostViewedVideo.videoLink}" target="_blank" class="image main">
+					<img src="${mostViewedVideo.thumbnailUrl}" alt="${mostViewedVideo.title}" />
+				</a>
+				<p><strong>Country:</strong> ${countryName}</p>
+				<p><strong>Views:</strong> ${formatNumber(mostViewedVideo.views)}</p>
+				<p>${truncateDescription(mostViewedVideo.description)}</p>
+			`;
+	
+			// Non-featured posts: Show remaining 9 videos for this country
+			nonFeaturedPosts.innerHTML = '';
+			videos.slice(1).forEach(video => {
+				const post = document.createElement('article');
+				post.innerHTML = `
+					<header>
+						<h3><a href="${video.videoLink}" target="_blank">${video.title}</a></h3>
+					</header>
+					<a href="${video.videoLink}" target="_blank" class="image fit">
+						<img src="${video.thumbnailUrl}" alt="${video.title}" />
+					</a>
+					<p><strong>Views:</strong> ${formatNumber(video.views)}</p>
+					<p>${truncateDescription(video.description)}</p>
+				`;
+				nonFeaturedPosts.appendChild(post);
+			});
+		}
+	
+		function updateActiveTab(regionGroup) {
+			const tabs = document.querySelectorAll('#nav .links li');
+			tabs.forEach(tab => {
+				const tabText = tab.textContent.toLowerCase();
+				const regionMap = {
+					top10: 'top 10 worldwide',
+					english: 'english world',
+					spanish: 'spanish world',
+					arabic: 'arabic world',
+				};
+	
+				if (regionMap[regionGroup] && tabText === regionMap[regionGroup]) {
+					tab.classList.add('active');
+				} else {
+					tab.classList.remove('active');
+				}
+			});
+		}
+	
 		fetchYouTubeData();
 	</script>
+	
+	
+	
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrollex.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
